# botcha-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
crates/botcha/: Cargo.toml
crates/botcha/src/: lib.rs
jsr/: jsr.json
jsr/sdk/: jsr.json  mod.ts
jsr/types/: jsr.json
python/cli/: README.md  pyproject.toml
python/cli/src/botcha_cli/: __init__.py
python/sdk/: README.md  pyproject.toml
python/sdk/src/botcha_sdk/: __init__.py
src/: cli.ts
