[package]
name = "botcha"
version = "0.0.0"
edition = "2021"
description = "Rust SDK for Botcha — the reverse CAPTCHA for AI agents. Coming soon."
license = "MIT"
repository = "https://github.com/botchaxyz/botcha-cli"
homepage = "https://botcha.xyz"
keywords = ["botcha", "captcha", "ai-agent", "verification"]
categories = ["authentication"]
